2009-08-20  Roland McGrath  <roland@redhat.com>

	* c++/dwarf_comparator: Use tracker::subtracker for subcomparator.
	Let mismatch hooks return bool that is true to keep comparing.
	* c++/dwarf_tracker: Define subtracker.

2009-08-19  Roland McGrath  <roland@redhat.com>

	* c++/dwarf_tracker: Revamp derived tracker logic.
	* c++/dwarf_comparator: Update user.

	* c++/subr.hh (wrapped_input_iterator::base): New method.
	(nothing): Kill operator (), really just nothing here.
	(create_container): Replace post-set hook with setter hook.
	(is): New callable template.
	(nostream): New template, dummy for << debug hacks.

	* c++/dwarf_output: Revamp construction for ref handling.
	* c++/dwarf_data: Miscellaneous updates for dwarf_output changes.
	* c++/dwarf_edit: Likewise.

	* c++/dwarf (skipping_wrapper::const_iterator): Add hasher.
	(debug_info_entry::raw_children_type::const_iterator): Likewise.
	(debug_info_entry::attributes_type): Make ordered an inline
	rather than a field.
	(range_list, arange_list): Likewise.

	* c++/data-values.hh (what_space): Use dynamic_cast rather than
	typeid, so we accept derived classes.

2009-08-16  Roland McGrath  <roland@redhat.com>

	* c++/dwarf_tracker (dwarf_ref_tracker): Add missing destructor.

2009-07-08  Roland McGrath  <roland@redhat.com>

	* c++/dwarf-knowledge.cc (expected_value_space):
	DW_AT_data_member_location can be constant or location.
	* c++/values.cc (what_space): Treat only data[48] as *ptr when those
	are expected.  No other data forms can be *ptr.

	* c++/output-shape.cc: New file.
	* Makefile.am (libdwpp_a_SOURCES): Add it.
	* c++/dwarf_output: Call add_shape method there.

2009-07-06  Roland McGrath  <roland@redhat.com>

	* c++/dwarf_tracker (tracker): Break out private class into ...
	(dwarf_path_finder): ... here.

2009-07-03  Roland McGrath  <roland@redhat.com>

	* c++/dwarf: Give line info stubby to_string methods.
	* c++/dwarf_data: Likewise.
	* c++/edit-values.cc: Likewise.
