@@ -1,5 +1,7 @@
 2009-08-20  Roland McGrath  <roland@redhat.com>
 
+	* c++/values.cc (value_string): Fix constant-block case.
+
 	* c++/dwarf_comparator: Use tracker::subtracker for subcomparator.
 	Let mismatch hooks return bool that is true to keep comparing.
 	* c++/dwarf_tracker: Define subtracker.
